--- a/Pagination_Emails/package.json
+++ b/Pagination_Emails/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pagination_Emails",
+  "name": "pagination_emails",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
